<resources>
    <string name="app_name">PropertyManager</string>
    <string name="property_id_label">Property ID: </string>
    <string name="property_id_hint">Enter Property ID: </string>
    <string name="property_name_label">Property Name: </string>
    <string name="property_name_hint">Enter Property Name: </string>
    <string name="property_description_label">Property Description: </string>
    <string name="property_description_hint">Enter Property Description: </string>
    <string name="property_availablility_date_label">Property Availability Date: </string>
    <string name="property_edit_property_label">Edit Property Details: </string>
    <string name="edit_property">Edit Property </string>

    <string name="date_picker_title">Property Availability Date:</string>

</resources>