<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PropertyEditFragment"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/property_name_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/property_name"
        android:inputType="none"
        android:hint="@string/property_name_hint">

    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/property_description_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/property_description"
        android:inputType="none"
        android:hint="@string/property_description_hint">

    </EditText>

</LinearLayout>