<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_background"
    tools:context=".fragments.PropertyDetailsFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:text="@string/property_id_label"
        style="?android:listSeparatorTextViewStyle">

    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/text_color_value"
        android:id="@+id/property_id">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:text="@string/property_name_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/text_color_value"
        android:id="@+id/property_name">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:text="@string/property_description_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/text_color_value"
        android:id="@+id/property_description">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:text="@string/property_availablility_date_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <Button android:id="@+id/availability_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/button_text_color_selector"
        android:background="@drawable/rounded_buttons"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:text="@string/property_edit_property_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <Button android:id="@+id/edit_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/button_text_color_selector"
        android:background="@drawable/rounded_buttons"
        android:text="@string/edit_property"
        />

</LinearLayout>